[package]
name = "editor"
description = "The program that lets you combine your script with the video processing API"
#description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
#license.workspace = true

[dependencies]
process = { path = "../process" }

anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
snafu = "0.8.4"
