[package]
name = "editor"
description = "GUI application for running video scripts"
#description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
#license.workspace = true

[dependencies]
#mediaseq = { path = "../mediaseq" }

anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
snafu = "0.8.4"
