[package]
name = "ffrust"
description = "[mediascript] Object-oriented wrappers around ffmpeg to help create video processing pipelines"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rusty_ffmpeg = { version = "0.16.1", features = ["link_system_ffmpeg"] }
snafu = "0.8.4"
