[package]
name = "mediascript"
description = "Standard library for media editing with mediascript"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ffrust = { path = "../ffrust" }

num-rational = "0.4.2"
regex = "1.11.1"
snafu = "0.8.5"
