[package]
name = "mediascript"
description = "Standard library for media editing with mediascript"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
num-rational = "0.4.2"
regex = "1.11.1"
rusty_ffmpeg = { version = "0.16.1", features = ["link_system_ffmpeg"] }
snafu = "0.8.5"
